fix capitalization, delete txt file, consistently use Path.of instead of Paths.get and switch pluses to commas