@@ -9,7 +9,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -33,11 +32,12 @@ public class ImageServiceTest {
     public void testAddOCRToImage() throws Exception {
         String testFile = "src/test/resources/dog-wikipedia.png";
 
-        Path testOutput = imageService.addOCRToImage(Path.of(testFile), Path.of(tmpFolder + "/dog"));
+        Path testOutput = imageService.addOCRToImage(Path.of(testFile),
+                Path.of(String.valueOf(tmpFolder), "dog"));
         String testOutputText = new Tika().parseToString(testOutput);
 
-        assertEquals(Paths.get(tmpFolder + "/dog.pdf"), testOutput);
-        assertTrue(Files.exists(Paths.get(tmpFolder + "/dog.pdf")));
+        assertEquals(Path.of(String.valueOf(tmpFolder), "dog.pdf"), testOutput);
+        assertTrue(Files.exists(Path.of(String.valueOf(tmpFolder), "dog.pdf")));
         assertTrue(testOutputText.contains("man's best friend"));
     }
 
@@ -45,11 +45,12 @@ public class ImageServiceTest {
     public void testAddOCRToMultipleImages() throws Exception {
         String testFile = "src/test/resources/listofimages.txt";
 
-        Path testOutput = imageService.addOCRToImage(Path.of(testFile), Path.of(tmpFolder + "/multipleimages"));
+        Path testOutput = imageService.addOCRToImage(Path.of(testFile),
+                Path.of(String.valueOf(tmpFolder), "multipleimages"));
         String testOutputText = new Tika().parseToString(testOutput);
 
-        assertEquals(Paths.get(tmpFolder + "/multipleimages.pdf"), testOutput);
-        assertTrue(Files.exists(Paths.get(tmpFolder + "/multipleimages.pdf")));
+        assertEquals(Path.of(String.valueOf(tmpFolder), "multipleimages.pdf"), testOutput);
+        assertTrue(Files.exists(Path.of(String.valueOf(tmpFolder), "multipleimages.pdf")));
         assertTrue(testOutputText.toLowerCase().contains("man's best friend"));   // PNG
         assertTrue(testOutputText.toLowerCase().contains("student affairs"));     // JPEG
         assertTrue(testOutputText.toLowerCase().contains("hope house"));          // TIF
@@ -63,7 +64,7 @@ public class ImageServiceTest {
         String testFile = "src/test/resources/Cat-Wikipedia.pdf";
 
         try {
-            imageService.addOCRToImage(Path.of(testFile), Path.of(tmpFolder + "/Cat-Wikipedia"));
+            imageService.addOCRToImage(Path.of(testFile), Path.of(String.valueOf(tmpFolder), "Cat-Wikipedia"));
         } catch (Exception e) {
             assertTrue(e.getMessage().contains("failed to generate PDF with OCR."));
         }
